# serializer

./: CMakeLists.txt  README.md
inc/: MyClass.h
inc/serialize/: archive.hpp  iarchive.hpp  oarchive.hpp  stream.hpp
src/: main.cpp
